--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11",
     "yup": "^0.32.9"
   },
   "scripts": {
